--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
     <main class="conteudo">
         <h1>Portfólio</h1>
         <p>Alguns trabalhos e estudos.</p>
-
+<!-- Imagens do portfólio -->
         <section class="galeria">
             <img src="images/Ciena.jpg" alt="Ciena" onclick="expandir(this)" />
             <img src="images/ITMOL.jpg" alt="In the Mood of Love (Wong Kar Wai)" onclick="expandir(this)" />
