--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
     <main class="conteudo">
         <h1>Contato</h1>
         <p>Preencha o formulário abaixo para entrar em contato comigo:</p>
-
+ <!-- Formulario de contato -->
         <form class="formulario" action="#" method="post">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" placeholder="Seu nome" required />
